fixed overflow problem with channels

--- a/react-app/src/components/SideBar/Sidebar.css
+++ b/react-app/src/components/SideBar/Sidebar.css
@@ -4,6 +4,7 @@
     flex: 0.25;
     height: 100vh;
     background-color: #2f3135;
+ 
 }
 
 .sideBarTop{
@@ -15,6 +16,7 @@
     background-color: #2f3135;
     color: white;
     border-bottom: 3px solid #26282c;
+
 }
 
 /* Server Container */
@@ -43,7 +45,7 @@
     width: 50px;
     background-color: blue;
     border-radius: 50%;
-    
+
 }
 
 .serverName{
@@ -53,6 +55,7 @@
 
 .sideBarChannels{
     flex:1;
+    overflow-y: scroll;
 
 }
 
